--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT="3010"
 MONGOOSE="mongodb+srv://inderdeep:Development123@cluster0.jommrv9.mongodb.net/ipbs_test?retryWrites=true&w=majority"
+JWT_SECRET="IPBS"
